feat: change statue eum & add switch network api fields
